@@ -10,6 +10,7 @@
 
 == Feedback
 
+- Gonzalo Suarez - parse_time_string(s) issue
 - Tony Day - http://github.com/tonyday - every and overlapping timeout issue
 - Nate Wiger (Schedulable call/trigger issue)
 - Aldric (readme errors)
